kustomize/app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  hostnames:
  - nginx.k8s.lan
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: wildcard-k8s-lan
    namespace: infra-gateway
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: nginx
        port: 8080
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
